dashboard and sonarlint